--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
       </button>
       <nav class="nav">
           <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+              <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
               <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
               <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
               <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
           </ul>
       </nav>
       </header>
+
+              <!-- Introduction -->
+      <section class = "intro" id = "home">
+        <h1 class = "section__title section__title--intro">
+          Hi, I'm <strong>Animesh Kumar</strong>
+        </h1>
+
+        <p class ="section__subtitle section__subtitle--intro">Software dev</p>
+        <img src="img/animesh.jpg" alt="a picture of Animesh Kumar smiling">
+
+
+      </section>
     </body>
 
 </html>
