--- a/index.html
+++ b/index.html
@@ -1,78 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content = "width=device-width, initial scale = 1.0";
-      <title> Animesh's Portfolio Website</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial scale = 1.0" ; <title> Animesh's Portfolio Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
 
-    </head>
-    <body>
-      <header>
-        <div class = "logo">
-          <img src="img/animesh.HEIC" alt="">
-        </div>
-        <button class="nav-toggle" aria-label="toggle navigation">
-          <span class="hamburger"></span>
-      </button>
-      <nav class="nav">
-          <ul class="nav__list">
-              <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-              <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
-          </ul>
-      </nav>
-      </header>
+</head>
 
-              <!-- Introduction -->
-      <section class = "intro" id = "home">
-        <h1 class = "section__title section__title--intro">
-          Hi, I'm <strong>Animesh Kumar</strong>
-        </h1>
+<body>
+  <header>
+    <div class="logo">
+      <img src="img/animesh.HEIC" alt="">
+    </div>
+    <button class="nav-toggle" aria-label="toggle navigation">
+      <span class="hamburger"></span>
+    </button>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+        <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+        <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <p class ="section__subtitle section__subtitle--intro">Software dev</p>
-        <img src="img/animesh.jpg" alt="a picture of Animesh Kumar smiling">
+  <!-- Introduction -->
+  <section class="intro" id="home">
+    <h1 class="section__title section__title--intro">
+      Hi, I'm <strong>Animesh Kumar</strong>
+    </h1>
+
+    <p class="section__subtitle section__subtitle--intro">Software dev</p>
+    <img src="img/animesh.jpg" alt="a picture of Animesh Kumar smiling">
 
 
-      </section>
+  </section>
 
-      <!-- My Services-->
+  <!-- My Services-->
 
-      <section class = "my-services" id = "services">
+  <section class="my-services" id="services">
 
-        <h2 class="section__title section__title--services">What I Do?</h2>
-        <div class="services">
-          <div class="service">
-              <h3>Design + Development</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                ea commodo consequat.</p>
-          </div> <!-- / service -->
-          
-          <div class="service">
-              <h3>E-Commerce</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div> <!-- / service -->
-          
-          <div class="service">
-              <h3>Python</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                consequat.</p>
-          </div> <!-- / service -->
-        </div> <!-- / services -->
+    <h2 class="section__title section__title--services">What I Do?</h2>
+    <div class="services">
+      <div class="service">
+        <h3>Design + Development</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat.</p>
+      </div> <!-- / service -->
 
-        <a href="#work" class="btn">My Work</a>
+      <div class="service">
+        <h3>E-Commerce</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div> <!-- / service -->
 
-      </section>
+      <div class="service">
+        <h3>Python</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </div> <!-- / service -->
+    </div> <!-- / services -->
 
-    </body>
+    <a href="#work" class="btn">My Work</a>
+
+  </section>
+
+  <!--About Me-->
+
+  <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I Am?</h2>
+      <p class="section__subtitle section__subtitle--about"></p>
+
+      <div class="about-me__body">
+        <p></p>
+        <p></p>
+      </div>
+
+      <img src="img/animesh_wai.jpg" alt="Animesh on a bridge">
+
+  </section>
+
+    <!--My work-->
+
+</body>
 
 </html>
